@@ -7,3 +7,5 @@ lein migrate
 
 echo "lein trampoline http-kit ..."
 lein trampoline http-kit
+
+# LEIN_NO_DEV=YES java -XX:PermSize=256M -XX:MaxPermSize=512M -Xms2g -Xmx2g -XX:+UseParallelGC -jar example-0.1.0-SNAPSHOT-standalone.jar
